Adjust magazine leaderboard ad

--- a/packages/global/components/magazine/templates/issue.marko
+++ b/packages/global/components/magazine/templates/issue.marko
@@ -14,7 +14,7 @@ $ const { id, pageNode } = data;
     <marko-web-page-wrapper class="mb-block">
       <@section|{ aliases }|>
         <global-gam-define-display-ad
-          name="rotation"
+          name="leaderboard"
           position="magazine_page"
           aliases=aliases
           modifiers=["inter-block"]
