--- a/packages/global/components/magazine/templates/publication.marko
+++ b/packages/global/components/magazine/templates/publication.marko
@@ -14,7 +14,7 @@ $ const perPage = 16;
     <marko-web-page-wrapper>
       <@section|{ aliases }|>
         <global-gam-define-display-ad
-          name="rotation"
+          name="leaderboard"
           position="magazine_page"
           aliases=aliases
           modifiers=["inter-block"]
