--- a/packages/global/components/magazine/templates/index.marko
+++ b/packages/global/components/magazine/templates/index.marko
@@ -14,7 +14,7 @@ $ const description = site.get("magazines.description");
     <marko-web-page-wrapper class="mb-block">
       <@section|{ aliases }|>
         <global-gam-define-display-ad
-          name="rotation"
+          name="leaderboard"
           position="magazine_page"
           aliases=aliases
           modifiers=["inter-block"]
