--- a/packages/global/components/layouts/content/default.marko
+++ b/packages/global/components/layouts/content/default.marko
@@ -26,6 +26,7 @@ $ const shouldInjectAds = ["article", "video", "news", "podcast"].includes(type)
 >
   <@section|{ aliases }| modifiers=["break-container", "first-sm"]>
     <global-gam-define-display-ad
+      name="leaderboard"
       position="content_page"
       aliases=aliases
       modifiers=["inter-block", "combined-leaderboard"]
