--- a/packages/global/components/layouts/content/product.marko
+++ b/packages/global/components/layouts/content/product.marko
@@ -11,6 +11,7 @@ $ const sections = getAsArray(input, "sections");
 >
   <@section|{ aliases }| modifiers=["first-sm"]>
     <global-gam-define-display-ad
+      name="leaderboard"
       position="content_page"
       aliases=aliases
       modifiers=["inter-block"]
