--- a/packages/global/components/layouts/website-section/feed.marko
+++ b/packages/global/components/layouts/website-section/feed.marko
@@ -27,6 +27,7 @@ $ const perPage = 18;
 
   <@section|{ aliases }| modifiers=["break-container", "first"]>
     <global-gam-define-display-ad
+      name="leaderboard"
       position="home_page"
       aliases=aliases
       modifiers=["inter-block", "combined-leaderboard"]
