--- a/packages/global/components/layouts/website-section/products.marko
+++ b/packages/global/components/layouts/website-section/products.marko
@@ -25,6 +25,7 @@ $ const perPage = 10;
 
   <@section|{ aliases }| modifiers=["first"]>
     <global-gam-define-display-ad
+      name="leaderboard"
       position="section_page"
       aliases=aliases
       modifiers=["inter-block"]
