--- a/packages/global/components/layouts/content/media-gallery.marko
+++ b/packages/global/components/layouts/content/media-gallery.marko
@@ -14,6 +14,7 @@ $ const sections = getAsArray(input, "sections");
 >
   <@section|{ aliases }| modifiers=["break-container", "first-sm"]>
     <global-gam-define-display-ad
+      name="leaderboard"
       position="content_page"
       aliases=aliases
       modifiers=["inter-block", "combined-leaderboard"]
