--- a/packages/global/components/layouts/website-section/home.marko
+++ b/packages/global/components/layouts/website-section/home.marko
@@ -13,6 +13,7 @@ $ const sections = getAsArray(input, "sections");
 >
   <@section|{ aliases }| modifiers=["break-container", "first"]>
     <global-gam-define-display-ad
+      name="leaderboard"
       position="home_page"
       aliases=aliases
       modifiers=["inter-block", "combined-leaderboard"]
