Udate header navigation with new items and toolbox
Update header layout with new header items and adjust spacing on header items in primary and secondary navigation.

--- a/packages/global/components/site-menu/index.marko
+++ b/packages/global/components/site-menu/index.marko
@@ -47,13 +47,13 @@ $ const hasUser = defaultValue(input.hasUser, false);
         />
       </div>
       <div class="d-none d-md-flex col-md-4">
-        $ const resourcesItems = site.getAsArray("navigation.desktopMenu.resources");
-        <if(resourcesItems.length)>
+        $ const toolboxItems = site.getAsArray("navigation.desktopMenu.toolbox")
+        <if(toolboxItems.length)>
           <default-theme-site-menu-section
             tag="nav"
             block-name=blockName
-            label="Resources"
-            items=site.getAsArray("navigation.desktopMenu.resources")
+            label="Toolbox"
+            items=toolboxItems
             modifiers=["primary"]
             reg-enabled=regEnabled
             has-user=hasUser
