--- a/sites/content.nrwa.org/server/styles/index.scss
+++ b/sites/content.nrwa.org/server/styles/index.scss
@@ -1,5 +1,5 @@
 $theme-site-header-breakpoints: (
-  hide-primary: 1000px, // effectively always hide the primary nav
+  hide-primary: 800px, // effectively always hide the primary nav
   hide-secondary: 780px,
   small-logo: 980px,
   small-text-primary: 0,
@@ -10,6 +10,32 @@ $theme-site-header-breakpoints: (
 $primary: #103a57;
 
 @import "../../node_modules/@rogue-monkey-media/package-global/scss/core";
+
+
+.site-header {
+  .site-navbar {
+    &--primary {
+      background-color: #3956a6;
+    }
+    &__items {
+      text-transform: none;
+      &--primary {
+        .site-navbar {
+          &__item {
+            padding-right: map-get($spacers, 4);
+            padding-left: map-get($spacers, 4);
+          }
+          &__item:last-of-type {
+            padding-left: 0;
+          }
+        }
+      }
+      &--secondary {
+        justify-content: space-between;
+      }
+    }
+  }
+}
 
 .site-footer {
   margin-top: 55px;
