--- a/sites/content.nrwa.org/server/styles/index.scss
+++ b/sites/content.nrwa.org/server/styles/index.scss
@@ -26,7 +26,7 @@ $primary: #103a57;
             padding-left: map-get($spacers, 4);
           }
           &__item:last-of-type {
-            padding-left: 0;
+            padding-right: 0;
           }
         }
       }
