--- a/packages/global/components/blocks/section-feed.marko
+++ b/packages/global/components/blocks/section-feed.marko
@@ -1,23 +1,24 @@
 import defaultValue from "@parameter1/base-cms-marko-core/utils/default-value";
 import queryFragment from "../../graphql/fragments/section-feed-block";
 
-$ const queryParams = {
+$ const queryParams =  input.queryName ? { ...input.queryParams } : {
   ...input.queryParams,
   sectionAlias: input.alias,
   queryFragment,
 };
+$ const queryName = input.queryName ? input.queryName : "website-scheduled-content";
 
 $ const blockName = "section-feed";
 $ const countOnly = defaultValue(input.countOnly, false);
 $ const lazyload = defaultValue(input.lazyload, true);
 
 <if(countOnly)>
-  <global-query-total-count|data| name="website-scheduled-content" params=queryParams>
+  <global-query-total-count|data| name=queryName params=queryParams>
     <${input.renderBody} ...data />
   </global-query-total-count>
 </if>
 <else>
-  <marko-web-query|{ nodes }| name="website-scheduled-content" params=queryParams>
+  <marko-web-query|{ nodes }| name=queryName params=queryParams>
     <marko-web-node-list
       inner-justified=true
       flush-x=true
