--- a/packages/global/components/magazine/templates/issue.marko
+++ b/packages/global/components/magazine/templates/issue.marko
@@ -1,102 +1,76 @@
 import { getAsObject } from "@parameter1/base-cms-object-path";
 import issueFragment from "../graphql/fragments/magazine-issue-archive";
+import contentListFragment from "../../../graphql/fragments/content-list"
 
-$ const { site } = out.global;
+$ const { site, pagination: p } = out.global;
 $ const { id, pageNode } = data;
+$ const perPage = 5;
 
 <marko-web-magazine-issue-page-layout id=id>
   <@head>
     <marko-web-gtm-magazine-issue-context|{ context }| id=id>
       <marko-web-gtm-push data=context />
     </marko-web-gtm-magazine-issue-context>
+    <marko-web-resolve-page|{ data: issue }| node=pageNode>
+      <global-section-feed-block|{ totalCount }|
+        query-name="magazine-scheduled-content"
+        count-only=true
+        query-params={ issueId: id }
+      >
+        <global-pagination-controls
+          per-page=perPage
+          total-count=totalCount
+          path=`magazine/${id}`
+          as-rels=true
+        />
+      </global-section-feed-block>
+    </marko-web-resolve-page>
   </@head>
   <@page>
-    <marko-web-page-wrapper class="mb-block">
-      <@section|{ aliases }|>
-        <global-gam-define-display-ad
-          name="leaderboard"
-          position="magazine_page"
-          aliases=aliases
-          modifiers=["inter-block"]
-        />
-      </@section>
-
-      <@section>
-        <div class="row">
-          <div class="col">
-            <marko-web-resolve-page|{ data: issue }| node=pageNode>
-              <default-theme-breadcrumbs modifiers=["website-section"]>
-                <@item><marko-web-link href="/magazine">Magazine</marko-web-link></@item>
-                <@item><marko-web-magazine-publication-name tag=null obj=issue.publication link=true /></@item>
-              </default-theme-breadcrumbs>
-              <div class="magazine-publication-card-block">
-                <div class="magazine-publication-card-block__body">
-                  <div class="row">
-                    <div class="col-lg-8 pl-0">
-                      <marko-web-node image-position="left" modifiers=["flush"] flush=false>
-                        <@image
-                          src=issue.coverImage.src
-                          alt=(issue.coverImage.alt || issue.name)
-                          fluid=false
-                          ar="3:4"
-                          width=300
-                          link={ href: issue.canonicalPath, title: issue.name }
-                        />
-                        <@body>
-                          <@title tag="h1">
-                            <marko-web-magazine-issue-name tag=null obj=issue />
-                          </@title>
-                          <@text modifiers=["teaser"]>
-                            <marko-web-magazine-issue-description tag=null obj=issue />
-                          </@text>
-                          <@footer>
-                            <@left>
-                              <global-magazine-publication-buttons issue=issue />
-                            </@left>
-                          </@footer>
-                        </@body>
-                      </marko-web-node>
-                    </div>
-                    <marko-web-query|{ nodes: issues }| name="magazine-active-issues"
-                      params={
-                        publicationId: issue.publication.id,
-                        excludeIssueIds: [issue.id],
-                        queryFragment: issueFragment,
-                        limit: 9,
-                        requiresCoverImage: true
-                      }
-                    >
-                      <div class="col-lg-4">
-                        <div class="row">
-                          <for|issue| of=issues>
-                            <div class="col-4 issue-archive-cover">
-                              <marko-web-node
-                                image-position="top"
-                                card=true
-                                flush=true
-                                full-height=true
-                              >
-                                <@image
-                                  src=issue.coverImage.src
-                                  alt=(issue.coverImage.alt || issue.name)
-                                  fluid=true
-                                  ar="3:4"
-                                  width=190
-                                  link={ href: issue.canonicalPath, title: issue.name }
-                                />
-                              </marko-web-node>
-                            </div>
-                          </for>
-                        </div>
-                      </div>
-                    </marko-web-query>
-                  </div>
-                </div>
+    <marko-web-resolve-page|{ data: issue }| node=pageNode>
+      <marko-web-page-wrapper class="mb-block">
+        <@section|{ aliases }|>
+          <global-gam-define-display-ad
+            name="leaderboard"
+            position="magazine_page"
+            aliases=aliases
+            modifiers=["inter-block"]
+          />
+        </@section>
+          <@section>
+            <div class="row">
+              <div class="col">
+                <h1 class="page-wrapper__title">${issue.name}</h1>
+                <if(issue.description)>
+                  <p class="page-wrapper__deck">$!{issue.description}</p>
+                </if>
               </div>
-            </marko-web-resolve-page>
-          </div>
-        </div>
-      </@section>
-    </marko-web-page-wrapper>
+            </div>
+          </@section>
+          <@section>
+            <marko-web-query|{ nodes: issueContent }| name="magazine-scheduled-content" collapsible=false params={ issueId: id, limit: perPage, skip: p.skip({ perPage }), queryFragment: contentListFragment }>
+              <default-theme-featured-flow>
+                <@featured node=issue>
+                  <global-magazine-latest-issue-block card=true flush=true node=issue />
+                </@featured>
+                <@list nodes=issueContent>
+                  <global-content-list-flow nodes=issueContent />
+                </@list>
+              </default-theme-featured-flow>
+            </marko-web-query>
+            <global-section-feed-block|{ totalCount }|
+              query-name="magazine-scheduled-content"
+              count-only=true
+              query-params={ issueId: id }
+            >
+              <global-pagination-controls
+                per-page=perPage
+                total-count=totalCount
+                path=`magazine/${id}`
+              />
+            </global-section-feed-block>
+          </@section>
+      </marko-web-page-wrapper>
+    </marko-web-resolve-page>
   </@page>
 </marko-web-magazine-issue-page-layout>
