Add primaryImage to product page.

--- a/packages/global/components/layouts/content/product.marko
+++ b/packages/global/components/layouts/content/product.marko
@@ -43,6 +43,7 @@ $ const sections = getAsArray(input, "sections");
         <div class="content-page-body">
           <default-theme-page-contents|{ blockName }| attrs={ "data-gallery-id": id }>
             $ const bodyId = `content-body-${content.id}`;
+            <global-primary-image-block obj=content.primaryImage force-display="right" />
             <marko-web-content-body block-name=blockName obj=content attrs={ id: bodyId } />
           </default-theme-page-contents>
         </div>
