Update Hamburger menu layout and items
Update desktop menu to display 4 column with search/aboutUs, Topics, Resources & Toolbox.

--- a/packages/global/components/site-menu/index.marko
+++ b/packages/global/components/site-menu/index.marko
@@ -18,11 +18,9 @@ $ const hasUser = defaultValue(input.hasUser, false);
   <!-- desktop -->
   <marko-web-element block-name=blockName name="contents-desktop">
     <div class="row">
-      <div class="col-6 col-md-4 col-lg-3">
+      <div class="col-6 col-lg-3">
         <!-- search box -->
         <search block-name=blockName />
-        <!-- social -->
-        <social-icons block-name=blockName />
         <!-- about section -->
         <default-theme-site-menu-section
           tag="nav"
@@ -33,8 +31,10 @@ $ const hasUser = defaultValue(input.hasUser, false);
           reg-enabled=regEnabled
           has-user=hasUser
         />
+        <!-- social -->
+        <social-icons block-name=blockName />
       </div>
-      <div class="col-6 col-md-4 col-lg-3">
+      <div class="col-6 col-lg-3">
         <!-- sections -->
         <default-theme-site-menu-section
           tag="nav"
@@ -46,7 +46,21 @@ $ const hasUser = defaultValue(input.hasUser, false);
           has-user=hasUser
         />
       </div>
-      <div class="d-none d-md-flex col-md-4">
+      <div class="col-6 col-lg-3">
+        $ const resources = site.getAsArray("navigation.desktopMenu.resources")
+        <if(resources.length)>
+          <default-theme-site-menu-section
+            tag="nav"
+            block-name=blockName
+            label="Resources"
+            items=resources
+            modifiers=["primary"]
+            reg-enabled=regEnabled
+            has-user=hasUser
+          />
+        </if>
+      </div>
+      <div class="col-6 col-lg-3">
         $ const toolboxItems = site.getAsArray("navigation.desktopMenu.toolbox")
         <if(toolboxItems.length)>
           <default-theme-site-menu-section
@@ -59,10 +73,6 @@ $ const hasUser = defaultValue(input.hasUser, false);
             has-user=hasUser
           />
         </if>
-        <else>
-          <!-- top stories (defer to client-side loader) -->
-          <marko-web-browser-component name="GlobalTopStoriesMenu" />
-        </else>
       </div>
     </div>
   </marko-web-element>
