--- a/packages/global/components/site-menu/index.marko
+++ b/packages/global/components/site-menu/index.marko
@@ -21,18 +21,19 @@ $ const hasUser = defaultValue(input.hasUser, false);
       <div class="col-6 col-lg-3">
         <!-- search box -->
         <search block-name=blockName />
+         <!-- social -->
+         <social-icons block-name=blockName />
         <!-- about section -->
         <default-theme-site-menu-section
           tag="nav"
           block-name=blockName
           label="About"
           items=site.getAsArray("navigation.desktopMenu.about")
-          modifiers=["secondary"]
+          modifiers=["primary"]
           reg-enabled=regEnabled
           has-user=hasUser
         />
-        <!-- social -->
-        <social-icons block-name=blockName />
+
       </div>
       <div class="col-6 col-lg-3">
         <!-- sections -->
