--- a/packages/global/components/layouts/content/default.marko
+++ b/packages/global/components/layouts/content/default.marko
@@ -38,6 +38,7 @@ $ const shouldInjectAds = ["article", "video", "news", "podcast"].includes(type)
     <div class="content-page-header">
       <global-content-page-breadcrumbs section=primarySection />
       <marko-web-content-name tag="h1" block-name=blockName obj=content />
+      <marko-web-content-teaser tag="i" class="page-contents__content-body" obj=content />
       <if(type !== "contact")>
         <if(authors.length === 1)>
           <global-author-published-node author=authors[0] content=content />
